Fix homepage navbar on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,6 @@ body {
   text-align: center;
   padding: 30px;
   text-decoration: none;
-  font-size: 20px;
   display: inline-block;
 }
 
@@ -37,6 +36,7 @@ body {
   border-style: solid;
   border-width: 0px 0px 3px 0px;
   border-color: aqua;
+  margin: -3px;
 }
 
 .navigation a:hover {
@@ -72,8 +72,8 @@ h2 {
   border-style: solid;
   border-width: 0px 0px 3px 0px;
   border-color: aqua;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 20vw;
+  padding-right: 20vw;
 }
 
 .text-body-bg:hover {
@@ -103,6 +103,7 @@ p {
   border-style: dashed;
   border-width: 0 0px 3px 0;
   border-color: aqua;
+  margin: -3px;
 }
 
 .contact-links {
@@ -118,6 +119,7 @@ p {
   border-style: dashed;
   border-width: 0 0px 3px 0;
   border-color: aqua;
+  margin: -3px;
 }
 
 .photo-me {
